# agent-critter

./: .gitignore  Cargo.toml  LICENSE  PLUGIN.md  README.en.md  README.md  agent-critter  build.rs  marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  refactor-plan.md
hooks/: hooks.json
scripts/: build-plugin.bat  build-plugin.sh
src/: assets.rs  client.rs  daemon.rs  hook.rs  lib.rs  main.rs  server.rs  state.rs  theme.rs  ui.rs  webview.rs
