[package]
name = "traffic-light-daemon"
version = "1.0.0"
edition = "2021"

[dependencies]
fltk = { version = "1.5", features = ["fltk-bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
rust-embed = "8"

# 修复：windows-sys 只在 Windows 目标下编译，避免 macOS 无用依赖
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
