[package]
name = "agent-critter"
version = "1.1.1"
edition = "2021"

[dependencies]
wry = "0.50"
tao = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = "8"
base64 = "0.22"
ureq = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
